# shares/docs/swagger/swagger.json
@@ -15,10 +15,6 @@
           {
                "name": "Shares",
                "description": ""
-          },
-          {
-               "name": "Weixin",
-               "description": ""
           }
      ],
      "schemes": [
@@ -609,240 +605,6 @@
                          }
                     }
                }
-          },
-          "/shares/api/v1/weixin.get_qrcode": {
-               "post": {
-                    "tags": [
-                         "Weixin"
-                    ],
-                    "summary": "获取微信二维码",
-                    "description": "获取微信二维码",
-                    "consumes": [
-                         "application/json",
-                         "application/xml"
-                    ],
-                    "produces": [
-                         "application/json",
-                         "application/xml"
-                    ],
-                    "parameters": [
-                         {
-                              "in": "body",
-                              "name": "body",
-                              "description": "获取微信二维码",
-                              "required": true,
-                              "schema": {
-                                   "$ref": "#/definitions/AnalyCodeReq"
-                              }
-                         }
-                    ],
-                    "responses": {
-                         "400": {
-                              "description": "v"
-                         },
-                         "404": {
-                              "description": "not found"
-                         },
-                         "405": {
-                              "description": "Validation exception"
-                         }
-                    }
-               }
-          },
-          "/shares/api/v1/weixin.get_user_info": {
-               "post": {
-                    "tags": [
-                         "Weixin"
-                    ],
-                    "summary": "",
-                    "description": "",
-                    "consumes": [
-                         "application/json",
-                         "application/xml"
-                    ],
-                    "produces": [
-                         "application/json",
-                         "application/xml"
-                    ],
-                    "parameters": [
-                         {
-                              "in": "body",
-                              "name": "body",
-                              "description": "",
-                              "required": true,
-                              "schema": {
-                                   "$ref": "#/definitions/AnalyCodeReq"
-                              }
-                         }
-                    ],
-                    "responses": {
-                         "400": {
-                              "description": "v"
-                         },
-                         "404": {
-                              "description": "not found"
-                         },
-                         "405": {
-                              "description": "Validation exception"
-                         }
-                    }
-               }
-          },
-          "/shares/api/v1/weixin.oauth": {
-               "post": {
-                    "tags": [
-                         "Weixin"
-                    ],
-                    "summary": "微信授权获取登录信息",
-                    "description": "微信授权获取登录信息",
-                    "consumes": [
-                         "application/json",
-                         "application/xml"
-                    ],
-                    "produces": [
-                         "application/json",
-                         "application/xml"
-                    ],
-                    "parameters": [
-                         {
-                              "in": "body",
-                              "name": "body",
-                              "description": "微信授权获取登录信息",
-                              "required": true,
-                              "schema": {
-                                   "$ref": "#/definitions/AnalyCodeReq"
-                              }
-                         }
-                    ],
-                    "responses": {
-                         "400": {
-                              "description": "v"
-                         },
-                         "404": {
-                              "description": "not found"
-                         },
-                         "405": {
-                              "description": "Validation exception"
-                         }
-                    }
-               }
-          },
-          "/shares/api/v1/weixin.re_login": {
-               "post": {
-                    "tags": [
-                         "Weixin"
-                    ],
-                    "summary": "是否要重新登录",
-                    "description": "是否要重新登录",
-                    "consumes": [
-                         "application/json",
-                         "application/xml"
-                    ],
-                    "produces": [
-                         "application/json",
-                         "application/xml"
-                    ],
-                    "parameters": [
-                         {
-                              "in": "body",
-                              "name": "body",
-                              "description": "是否要重新登录",
-                              "required": true,
-                              "schema": {
-                                   "$ref": "#/definitions/AnalyCodeReq"
-                              }
-                         }
-                    ],
-                    "responses": {
-                         "400": {
-                              "description": "v"
-                         },
-                         "404": {
-                              "description": "not found"
-                         },
-                         "405": {
-                              "description": "Validation exception"
-                         }
-                    }
-               }
-          },
-          "/shares/api/v1/weixin.update_user_info": {
-               "post": {
-                    "tags": [
-                         "Weixin"
-                    ],
-                    "summary": "更新用户信息",
-                    "description": "更新用户信息",
-                    "consumes": [
-                         "application/json",
-                         "application/xml"
-                    ],
-                    "produces": [
-                         "application/json",
-                         "application/xml"
-                    ],
-                    "parameters": [
-                         {
-                              "in": "body",
-                              "name": "body",
-                              "description": "更新用户信息",
-                              "required": true,
-                              "schema": {
-                                   "$ref": "#/definitions/AnalyCodeReq"
-                              }
-                         }
-                    ],
-                    "responses": {
-                         "400": {
-                              "description": "v"
-                         },
-                         "404": {
-                              "description": "not found"
-                         },
-                         "405": {
-                              "description": "Validation exception"
-                         }
-                    }
-               }
-          },
-          "/shares/api/v1/weixin.upset_user_info": {
-               "post": {
-                    "tags": [
-                         "Weixin"
-                    ],
-                    "summary": "更新用户信息",
-                    "description": "更新用户信息",
-                    "consumes": [
-                         "application/json",
-                         "application/xml"
-                    ],
-                    "produces": [
-                         "application/json",
-                         "application/xml"
-                    ],
-                    "parameters": [
-                         {
-                              "in": "body",
-                              "name": "body",
-                              "description": "更新用户信息",
-                              "required": true,
-                              "schema": {
-                                   "$ref": "#/definitions/AnalyCodeReq"
-                              }
-                         }
-                    ],
-                    "responses": {
-                         "400": {
-                              "description": "v"
-                         },
-                         "404": {
-                              "description": "not found"
-                         },
-                         "405": {
-                              "description": "Validation exception"
-                         }
-                    }
-               }
           }
      },
      "securityDefinitions": {},
@@ -1024,25 +786,6 @@
                     "wrapped": false
                }
           },
-          "GetQrcodeReq": {
-               "type": "object",
-               "properties": {
-                    "page": {
-                         "type": "string",
-                         "format": "string",
-                         "description": "小程序页面头部"
-                    },
-                    "scene": {
-                         "type": "string",
-                         "format": "string",
-                         "description": "附带参数"
-                    }
-               },
-               "xml": {
-                    "name": "",
-                    "wrapped": false
-               }
-          },
           "GetsReq": {
                "type": "object",
                "properties": {
@@ -1050,25 +793,6 @@
                          "type": "object",
                          "format": "array",
                          "description": "股票代码"
-                    }
-               },
-               "xml": {
-                    "name": "",
-                    "wrapped": false
-               }
-          },
-          "OauthReq": {
-               "type": "object",
-               "properties": {
-                    "isUpdateUser": {
-                         "type": "boolean",
-                         "format": "bool",
-                         "description": "是否更新用户"
-                    },
-                    "jscode": {
-                         "type": "string",
-                         "format": "string",
-                         "description": "微信端jscode"
                     }
                },
                "xml": {
@@ -1117,74 +841,6 @@
                          "type": "string",
                          "format": "string",
                          "description": "推荐人"
-                    }
-               },
-               "xml": {
-                    "name": "",
-                    "wrapped": false
-               }
-          },
-          "UpsetUserInfoReq": {
-               "type": "object",
-               "properties": {
-                    "key": {
-                         "type": "string",
-                         "format": "string",
-                         "description": ""
-                    },
-                    "value": {
-                         "type": "string",
-                         "format": "string",
-                         "description": ""
-                    }
-               },
-               "xml": {
-                    "name": "",
-                    "wrapped": false
-               }
-          },
-          "WxUserinfo": {
-               "type": "object",
-               "properties": {
-                    "avatarURL": {
-                         "type": "string",
-                         "format": "string",
-                         "description": "用户头像，最后一个数值代表正方形头像大小（有0、46、64、96、132数值可选，0代表640*640正方形头像），用户没有头像时该项为空。若用户更换头像，原有头像URL将失效。"
-                    },
-                    "city": {
-                         "type": "string",
-                         "format": "string",
-                         "description": "用户所在城市"
-                    },
-                    "country": {
-                         "type": "string",
-                         "format": "string",
-                         "description": "用户所在国家"
-                    },
-                    "gender": {
-                         "type": "string",
-                         "format": "string",
-                         "description": "用户的性别，值为1时是男性，值为2时是女性，值为0时是未知"
-                    },
-                    "language": {
-                         "type": "string",
-                         "format": "string",
-                         "description": "用户的语言，简体中文为zh_CN"
-                    },
-                    "nickName": {
-                         "type": "string",
-                         "format": "string",
-                         "description": "用户昵称"
-                    },
-                    "province": {
-                         "type": "string",
-                         "format": "string",
-                         "description": "用户所在省份"
-                    },
-                    "sessionID": {
-                         "type": "string",
-                         "format": "string",
-                         "description": "用户sessionid 用于当前交互使用"
                     }
                },
                "xml": {
